changes in class legend

--- a/P02/index.html
+++ b/P02/index.html
@@ -20,15 +20,17 @@
 
     <ul class="legend">
         <li>
-            <div class="Seat"></div>
+            <div class="seat"></div>
             <small>Available</small>
         </li>
+
         <li>
-            <div class="Seat Selected"></div>
+            <div class="seat selected"></div>
             <small>Selected</small>
         </li>
+
         <li>
-            <div class="Seat Occupied"></div>
+            <div class="seat occupied"></div>
             <small>Occupied</small>
         </li>
         
