--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <li><a href="/P-012/index.html">HTML Form validation</a></li>
         <li><a href="/P-013/index.html">HTML Form validation</a></li>
         <li><a href="/P-014/index.html">HTML Form validation</a></li>
-        <li><a href="/P-015/index.html">HTML Form validation</a></li>
+        <li><a href="/P-015/index.html">Search Lyrics</a></li>
     </ol>
     
 </body>
