--- a/P_015/index.html
+++ b/P_015/index.html
@@ -21,7 +21,12 @@
     </header>
 
     <!-- Result Section - display Search results-->
-    
+    <div class="container" id="results">
+        <p>Display Search results here.</p>
+    </div>
+
+    <!-- Navigation section for previous and next buttons -->
+    <div class="container centered" id="pagination"></div>
 
 
     <script src="script.js"></script>
