--- a/P_019/index.html
+++ b/P_019/index.html
@@ -11,7 +11,7 @@
     <div class="overlay"></div>
     <div class="wrapper">
         <div class="">
-            <h1 class="title"><span>2021</span>NEW YEAR COUNTDOWN</h1>
+            <h1 class="title"><span>2022</span>NEW YEAR COUNTDOWN</h1>
             <div class="countdown-container">
                 <div>
                     <p id="days" class="big-text">0</p>
@@ -22,12 +22,12 @@
                     <span>Hours</span>
                 </div>
                 <div>
-                    <p id="min" class="big-text">0</p>
-                    <span>Min</span>
+                    <p id="mins" class="big-text">0</p>
+                    <span>Mins</span>
                 </div>
                 <div>
-                    <p id="sec" class="big-text">0</p>
-                    <span>Sec</span>
+                    <p id="secs" class="big-text">0</p>
+                    <span>Secs</span>
                 </div>
 
             </div>
