--- a/P-001/pracitce.html
+++ b/P-001/pracitce.html
@@ -3,39 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="practice.css">
     <title>HTML Form Validation</title>
 </head>
 <body>
     <div class="container">
-        <form id="form" class="form">
+        <form action="" id="form" class="form">
             <h2>Sign Up</h2>
             <div class="form-control">
-                <label for="username">Username</label>
+                <label for="username">username</label>
                 <input type="text" id="username" placeholder="Enter username">
                 <small>Error Message</small>
             </div>
             <div class="form-control">
-                <label for="email">Email</label>
+                <label for="email">email</label>
                 <input type="text" id="email" placeholder="Enter email">
                 <small>Error Message</small>
             </div>
             <div class="form-control">
-                <label for="password">Password</label>
+                <label for="password">password</label>
                 <input type="password" id="password" placeholder="Enter password">
                 <small>Error Message</small>
             </div>
             <div class="form-control">
-                <label for="password2">Confirm Password</label>
+                <label for="password2">confirm password </label>
                 <input type="password" id="password2" placeholder="Enter password again">
                 <small>Error Message</small>
             </div>
             <button>Submit</button>
         </form>
-
-        <a href="../index.html"></a>
-
     </div>
-    <script src="script.js"></script>
+    <script src="practice.js"></script>
 </body>
 </html>
